fix: remove overflow: hidden for body

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3,9 +3,9 @@
 
 /* /////////////////////////////// */
 /* /////////////////////////////// */
-body {
+/* body {
   overflow: hidden;
-}
+} */
 
 .wrapper {
   display: grid;
